--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Kuda's 2D Online CV" />
   <link rel="apple-touch-icon" href="./logo192.png" />
   <link rel="manifest" href="./manifest.json" />
-  <title>Kuda Rukuni | Online CV</title>
+  <title>Kuda Rukuni | 2D Online CV</title>
 </head>
 
 <body>
