--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,20 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+  <script type="text/javascript">
+      (function () {
+          var options = {
+              whatsapp: "+263782516263", // WhatsApp number
+              call_to_action: "Whatsapp Kuda", // Call to action
+              button_color: "#FF6550", // Color of button
+              position: "right", // Position may be 'right' or 'left'
+          };
+          var proto = 'https:', host = "getbutton.io", url = proto + '//static.' + host;
+          var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = url + '/widget-send-button/js/init.js';
+          s.onload = function () { WhWidgetSendButton.init(host, proto, options); };
+          var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);
+      })();
+  </script>
 </body>
 
 </html>
